# bulk_ms-swarch-2025

./: .dockerignore  .env.example  .prodignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  worker.py
models/: company.py  healthcheck.py  message.py  person.py  processing.py
models/examples/: company.py  person.py
routers/: __init__.py  tasks.py
routers/examples/: __init__.py  companies.py  people.py
services/example/: companies.py  people.py
services/examples/: companies.py  people.py
tasks/: example.py  examples.py
