[project]
name = "mu-bulk-ms"
version = "0.0.0"
description = "MeetUN Bulk CRUD operations handled asynchronously"
readme = "README.md"
requires-python = ">=3.13.4"
dependencies = [
    "celery>=5.5.3",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "flower>=2.0.1",
    "redis>=6.2.0",
]
